...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="326dp" />

    <Button
        android:id="@+id/LoginBTN"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="LOGIN"
        app:layout_constraintBottom_toTopOf="@+id/RegisterBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <Button
        android:id="@+id/RegisterBTN"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginStart="109dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBTN" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="259dp"
        android:layout_height="61dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="1dp"
...
