<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/follow_screen">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="80dp"
        android:background="@color/zxing_transparent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="307dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="89dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="Search User"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/searchButton"
                android:layout_width="45dp"
                android:layout_height="46dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:clickable="true"
                android:tint="@color/white"
                app:backgroundTint="@color/purple_500"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_baseline_search_24" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/followingReq"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="262dp"
        android:layout_height="84dp"
        android:layout_below="@+id/my_toolbar1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="36dp"
        android:background="#00000000"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listOfExistingFollowers"
        android:layout_width="match_parent"
        android:layout_height="444dp"
        android:layout_below="@+id/followingReq"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:choiceMode="none"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/openCameraButton"
        android:layout_width="105dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="168dp"
        android:background="#00000000" />

</RelativeLayout>