...
    android:layout_height="match_parent"
    android:background="@drawable/addhabitscreen"
    tools:context=".Activities.AddHabit.AddHabitBaseFragment">


    <EditText
        android:id="@+id/fragmentHabitTitle"
        android:layout_width="299dp"
        android:layout_height="37dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:hint="Enter Your Title"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <EditText
        android:id="@+id/fragmentHabitDescription"
        android:layout_width="295dp"
        android:layout_height="181dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:hint="Enter Habit Description"
...
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentHabitTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragmentStartDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="57dp"
        android:gravity="center_horizontal"
...
