...

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/habitName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/purple_500"
                android:text="HabitName"
                android:textSize="20dp"
                />
<!--            text-->
        </LinearLayout>

        <ImageButton
            android:id="@+id/completeHabit"
            android:layout_width="101dp"
            android:layout_height="98dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:padding="5dp"
...
