...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />


    <TextView
        android:id="@+id/recordComment"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:hint="Add a comment."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:id="@+id/locationConst"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:text="Location:"
        app:layout_constraintEnd_toStartOf="@+id/locationView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordComment" />

</androidx.constraintlayout.widget.ConstraintLayout>
